--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'Streamapp'
 
 include ':app'
+include ':react-native-socketio'
+project(':react-native-socketio').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-socketio/android')
 include ':react-native-webrtc'
 project(':react-native-webrtc').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-webrtc/android')
