--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "0.34.0",
+    "react-native-socketio": "git+https://github.com/xclassworks/react-native-socketio.git",
     "react-native-webrtc": "^0.13.0"
   }
 }
